--- a/heresy.html
+++ b/heresy.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <title>Temporada da Heresia - A Caverna</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/od1n0/heresia-caverna@main/css/style.css">
 </head>
 <body>
     <div class="overlay"></div>
@@ -883,7 +883,7 @@
   </div>
   
     </div>
-  <script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/od1n0/heresia-caverna@main/js/script.js"></script>
   <script>
     document.addEventListener('mousemove', e => {
       const x = (window.innerWidth / 2 - e.clientX) / 50;
