--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <title>Temporada da Heresia - A Caverna</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://od1n0.github.io/heresia-caverna/css/estilos.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/od1n0/heresia-caverna@main/css/style.css">
 </head>
 <body>
     <div class="overlay"></div>
